<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SignupTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:contentDescription="@string/signup_image"
                android:src="@drawable/signimg"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:id="@+id/signup_email"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                android:hint="@string/email"
                android:drawableStart="@drawable/baseline_account_circle_24"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext_bkg"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:id="@+id/signup_password"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_123_24"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext_bkg"/>

            <EditText
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:id="@+id/signup_confirm"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/baseline_123_24"
                android:drawablePadding="8dp"
                android:background="@drawable/edittext_bkg"/>

            <Button
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:id="@+id/signup_button"
                android:textSize="18sp"
                android:text="@string/signup"
                app:cornerRadius = "30dp"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>