<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp"
        android:paddingBottom="50dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/baseline_add_task_24"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/add_a_task"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/fill_the_details_below_to_add_a_task_into_your_todo"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:alpha="0.8"
            android:textSize="18sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/task_title"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/add_task_btn_border"
            android:padding="10dp"
            android:id="@+id/addTaskTitle"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/task_description"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/add_task_btn_border"
            android:padding="10dp"
            android:id="@+id/addTaskDescription"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/task_date"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/add_task_btn_border"
            android:padding="10dp"
            android:id="@+id/taskDate"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/task_time"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/add_task_btn_border"
            android:padding="10dp"
            android:id="@+id/taskTime"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginStart="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/add_an_event"
            tools:ignore="MissingPrefix" />

        <EditText
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="5dp"
            android:singleLine="true"
            android:background="@drawable/add_task_btn_border"
            android:padding="10dp"
            android:id="@+id/taskEvent"
            tools:ignore="MissingPrefix" />

        <Button
            android:layout_width="match_parent"
            android:backgroundTint="@color/blue"
            android:layout_height="68dp"
            android:id="@+id/addTask"
            android:text="@string/add_task"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="40dp" />

    </LinearLayout>
</ScrollView>