<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp"
    tools:context=".activity.TodoActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo_list"
                android:textColor="@color/blue"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:ignore="MissingPrefix" />

        </LinearLayout>

        <ImageView
            android:id="@+id/profile"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right|center"
            android:background="@drawable/baseline_account_circle_24"
            android:contentDescription="@string/my_profile"
            tools:ignore="RtlHardcoded" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/noDataImage"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:contentDescription="TODO" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/taskRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

        <TextView
            android:id="@+id/addTask"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.5"
            android:drawablePadding="10dp"
            android:paddingTop="10dp"
            android:text="@string/add_a_task"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="20sp"
            app:drawableLeftCompat="@drawable/baseline_add_task_24" />

    </LinearLayout>

</LinearLayout>